# slack-gpt

./: .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.ai/: 0.2.story.md  0.3.story.md  0.4.story.md  0.5.story.md  1.1.story.md  1.2.story.md  1.3.story.md  2.1.story.md  2.2.story.md  2.3.story.md  3.1.story.md  3.2.story.md  3.3.story.md  4.2.story.md  PO.md  arch-deep.md  arch.md  prd.md  slack-gpt-assistant.md
.ai/stories/: 0.1.story.md  0.4.story.md  2.1.story.md  2.2.story.md  2.3.story.md  3.1.story.md  3.2.story.md  3.3.story.md  3.4.story.md  4.1.story.md  4.2.story.md  4.3.story.md  5.1.KB_Token_Context.story.md  5.2.OpenAI_Max_Tokens.story.md  5.3.OpenAI_Prompt_Error.story.md
app/: main.py
app/handlers/: ask_command.py  help_command.py
app/services/: knowledge_base.py  openai_service.py  redis_service.py
app/utils/: config.py  logging_config.py
tests/: test_ask_command.py
tests/services/: test_knowledge_base.py  test_openai_service.py  test_redis_service.py
